fixed the base Url and route/redirect url

--- a/rag-backend/.env.example
+++ b/rag-backend/.env.example
@@ -20,7 +20,7 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
 
 # Frontend URL (for OAuth redirects and CORS)
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3000/humanoid-robotics-handbook
 
 # Application
 COLLECTION_NAME=humaonoid-textbook
