--- a/humanoid-textbook/package.json
+++ b/humanoid-textbook/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^3.0.0",
     "@openai/chatkit-react": "^1.5.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.574.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
